# python-project-template

./: CHANGELOG.md  poetry.toml  pyproject.toml  release.config.js  rename-template.sh
.github/workflows/: check.yml
resources/: __init__.py
test/: test_math.py
