[tool.poetry]
name = "python-project-template"
packages = [
    { include = "src" },
]
version = "0.1.0"
description = "A python project template, using Poetry."
authors = ["Mattia Matteini <matteinimattia@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
coverage = "^7.8.0"
mypy = "^1.15.0"
poethepoet = "^0.33.1"
ruff = "^0.11.6"
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
